[package]
name = "lindera-ipadic"
version = "0.8.1"
authors = [
    "Paul Masurel <paul.masurel@gmail.com>",
    "Minoru Osuka <minoru.osuka@gmail.com>",
    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>",
    "Jun Ohtani <johtani@gmail.com>"
    ]
edition = "2021"
description = "A Japanese morphological dictionary loader for IPADIC."
documentation = "https://docs.rs/lindera-ipadic"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera/lindera-ipadic"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "loader", "ipadic"]
categories = ["text-processing"]
license = "MIT"

[features]
smallbinary = ["lindera-decompress", "lindera-ipadic-builder-compress"]
default = ["lindera-ipadic-builder"]

[dependencies]
bincode = "1.3"
byteorder = "1.4"
once_cell = "1"

lindera-core = { version = "0.8.1", path = "../lindera-core" }
lindera-decompress = { path = "../lindera-decompress", optional = true }

[build-dependencies]
flate2 = "1.0"
reqwest = "0.11"
tar = "0.4"
encoding = "0.2"
tokio = { version = "1.9", features = ["full"] }

lindera-core = { version = "0.8.1", path = "../lindera-core" }
lindera-ipadic-builder = { version = "0.8.1", path = "../lindera-ipadic-builder", optional = true}
lindera-ipadic-builder-compress = { version = "0.8.1", path = "../lindera-ipadic-builder-compress", optional = true}
